--- a/style.css
+++ b/style.css
@@ -1,42 +1,131 @@
-*{margin: 0;
-padding: 0;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-.base{
-    
-background-image: linear-gradient(#05253a , #1070b5);
 
- }
-
-.CABEÇALHO{
-    color: azure;
-    background-color: #041d3a;
+.cabecalho{
+    background-image: linear-gradient(#000000, #1E90FF);
+    color: white;
     display: flex;
-    justify-content: center;}
-
-.foto-cabeçalho{
-   width: 10%;
-
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
 }
 
-.head{
 
-    color: aliceblue;
-
-
+.IMG-cabecalho{
+    width: 10%;
 }
-.fotodaescola{
-
-    width: 50%;
 
 
+.escrita-cabecalho-item{
+    display: inline-block;
+    margin: 0 20px;
+    font-size: 200%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.texto{
-
-display: flex;
-justify-content: space-between;
-color: azure;
-font-family: Verdana, Geneva, Tahoma, sans-serif;
 
 
+.corpo{
+    background-image: linear-gradient(#1E90FF,#000a11);
+}
+
+
+.imagem-JoaoBatista{
+    width: 800%;
+}
+
+
+.escola{
+    color: white;
+    padding: 24px 0;
+}
+
+
+.conteudo-1{
+    display: flex;
+    padding: 34px 76px;
+}
+
+
+.titulo-1{
+    font-size: 500%;
+    display: flex;
+    justify-content: end;
+    padding: 0px 450px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: black;
+}
+
+
+.texto-1{
+    font-size: 130%;
+    padding: 0px 150px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.img-estudante1{
+    width: 70%;
+    padding: 20px 0px;
+}
+
+.icone-estudante1{
+    width: 10%;
+}
+
+.estudante1-div{
+    text-align: center;
+    padding: 16px;
+}
+
+.Quem-Sao-Nossos-Estudantes{
+    padding: 60px 0px;
+    font-size: 200%;
+    text-align: center;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.nome-estudante1{
+    color: white;
+    width: 40%;
+}
+
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    padding: 30px 0px;
+    
+}
+
+.rodape{
+    background-color: black;
+    color: white;
+    display: flex;
+    padding: 30px 0;
+}
+
+.rodape-img{
+    width: 7%;
+}
+
+.instagram-escola{
+    width: 3%;
+}
+
+.facebook-escola{
+    width: 40%;
+}
+
+.icones-rodape{
+    display: list-item;
+}
+
+.instagram{
+    display: flex;
+}
+
+.facebook{
+    display: flex; 
 }
